# rs-stitchly-v2

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/icons/: icon.icns
apps/desktop/src/: ci_status.rs  engine_manager.rs  lib.rs  llama_chat.rs
crates/duckdb-engine/: Cargo.toml
crates/duckle-mcp/: catalog.json
crates/duckle-runner/: Cargo.toml
docs/: roadmap.md
docs/00_foundation/: 01_local-studio-surfaces.md  02_local-studio-quickstart.md  04_dev-run-modes.md
docs/02_workflows/: 13_dolt-sync-pipeline-runbook.md
docs/03_runtime/: 09_http-runtime-bridge.md
docs/05_agent_skills/: 00_project-skills.md
docs/dolt_scripts/: assert_sync_ok.sql  export_gate.sql  export_tables_to_stage.sh  parse_export_plan.sql  parse_export_result.sql  parse_sync_result.sh  plan_exports.sh  publish_and_export_state.sh  repo_config_earnings.sql  sync_repo.sh
docs/tiktok/: .env.example  .gitignore  README.md  tiktok_auth_probe.sh  tiktok_auth_status.sh  tiktok_common.sh  tiktok_download_video.sh  tiktok_exchange_code.sh  tiktok_login_exchange.sh  tiktok_make_auth_url.sh  tiktok_refresh_token.sh  tiktok_user_info.sh  tiktok_video_list.sh  tiktok_wait_for_code.sh  video_download_mechanisms.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  node-subtitle.ts  persistence.ts  pipeline-types.ts  (+4 more)
scripts/: sync_codex_skills.sh
stitchly_workspace/: duckle.json  repository.json
website/: index.html  robots.txt  site.webmanifest  sitemap.xml  use-cases.html
(+111 files in other folders)
