[package]
name = "duckle-desktop"
description = "Duckle Tauri 2 desktop shell."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "duckle_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "duckle"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
duckle-runtime = { workspace = true }
duckle-metadata = { workspace = true }
duckle-plugin-sdk = { workspace = true }
duckle-connectors = { workspace = true }
duckle-duckdb-engine = { workspace = true }
duckle-scheduler = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
zip = "2"

[dev-dependencies]
tempfile = "3.10"

[features]
# Required for release builds. Without this feature, tauri-codegen
# generates an asset resolver that points at devUrl
# (http://localhost:5173), so the WebView shows ERR_CONNECTION_REFUSED.
# `tauri build` sets this automatically; raw `cargo build --release`
# does not, so the release workflow must pass `--features custom-protocol`.
custom-protocol = ["tauri/custom-protocol"]
